gccida/c0/bitmap_copy
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_copy/src/bitmap.c:725:12: error: expected expression
*( _OWORD *)to_elt->bits = *( _OWORD *)from_ptr->bits; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_copy/src/bitmap.c:725:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)to_elt->bits = *( _OWORD *)from_ptr->bits; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/bitmap_copy/src/obj/bitmap.o] Error 1
